Zmiana enpointów nagłówków listy zakupów
