# rest/common/models/shopping_list_header.py
@@ -4,6 +4,7 @@ from typing import List, Any, Dict
 
 from psycopg2.extras import RealDictRow
 
+from rest.common.dates import datetime_to_string
 from rest.sql.db_repository import call_query
 from rest.sql.query_return_type import QueryReturnType
 
@@ -11,8 +12,10 @@ from rest.sql.query_return_type import QueryReturnType
 class ShoppingListHeader:
     id: int
     title: str
+    creation_date: datetime
     update_date: datetime
     updated_by: str
+    owner_username: str
     category_name: str
     category_color: str
     user_id: int
@@ -22,8 +25,10 @@ class ShoppingListHeader:
         self,
         shopping_list_header_id: int,
         title: str,
+        creation_date: datetime,
         update_date: datetime,
         updated_by: str,
+        owner_username: str,
         category_name: str,
         category_color: str,
         user_id: int,
@@ -31,8 +36,10 @@ class ShoppingListHeader:
     ):
         self.id = shopping_list_header_id
         self.title = title
+        self.creation_date = creation_date
         self.update_date = update_date
         self.updated_by = updated_by
+        self.owner_username = owner_username
         self.category_name = category_name
         self.category_color = category_color
         self.user_id = user_id
@@ -42,8 +49,10 @@ class ShoppingListHeader:
         return {
             'id': self.id,
             'title': self.title,
-            'update_date': self.update_date,
+            'creation_date': datetime_to_string(self.creation_date),
+            'update_date': datetime_to_string(self.update_date),
             'updated_by': self.updated_by,
+            'owner_username': self.owner_username,
             'category_name': self.category_name,
             'category_color': self.category_color,
             'user_id': self.user_id,
@@ -86,8 +95,10 @@ class ShoppingListHeader:
             shopping_list_headers.append(ShoppingListHeader(
                 header['shopping_list_id'],
                 header['title'],
+                header['creation_date'],
                 header['update_date'],
                 header['updated_by'],
+                header['owner_username'],
                 header['category_name'],
                 header['category_color'],
                 header['user_id'],
